Connection Update, and URI addition
The connection was modified to link to the project production Database

URIs were added for the Account, Event and Process Tables.

The models for the tables LegalAdvice, Appointment, Reminder and AuditoryLog were created.

--- a/project/.env
+++ b/project/.env
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb+srv://brquispe:brquispe@clusterpractice.pdirv5f.mongodb.net/LegalDB-mysql?retryWrites=true&w=majority
+MONGODB_URI=mongodb+srv://brquispe:brquispe@clusterpractice.pdirv5f.mongodb.net/legalSystemDB?retryWrites=true&w=majority
 PORT=3000
