--- a/project/package.json
+++ b/project/package.json
@@ -6,7 +6,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "Mateo Medranda",
+  "author": "Bryan Quispe",
   "license": "ISC",
   "description": "",
   "dependencies": {
