Buisness Rule APIs for appointment and reminder
Appointments can be grouped by month, week and the closest in three days, a reminder can also be created from an appointment, and the reminder can be sent via email.

-For the email, the nodemailer library is required

--- a/project/.env
+++ b/project/.env
@@ -1,2 +1,4 @@
 MONGODB_URI=mongodb+srv://brquispe:brquispe@clusterpractice.pdirv5f.mongodb.net/legalSystemDB?retryWrites=true&w=majority
 PORT=3000
+GMAIL_APP_USER=marcelegacy32@gmail.com
+GMAIL_APP_PASSWORD=lyfe pzyb vacf yfkv
