--- a/project/package.json
+++ b/project/package.json
@@ -15,6 +15,7 @@
     "mongoose": "^8.16.1"
   },
   "devDependencies": {
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+     "multer": "^1.4.5-lts.1"
   }
 }
