--- a/project/.env
+++ b/project/.env
@@ -2,3 +2,8 @@ MONGODB_URI=mongodb+srv://brquispe:brquispe@clusterpractice.pdirv5f.mongodb.net/
 PORT=3000
 GMAIL_APP_USER=marcelegacy32@gmail.com
 GMAIL_APP_PASSWORD=lyfe pzyb vacf yfkv
+GOOGLE_CLIENT_ID=354288744829-b1su6956qo4ufp282h2326uovf85gn9a.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
+GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
+JWT_SECRET=mi_jwt_super_clave_123456789!
+
