--- a/project/package.json
+++ b/project/package.json
@@ -11,12 +11,14 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.6.1",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.16.1",
+    "mongoose-sequence": "^6.0.1",
     "multer": "^2.0.1",
     "nodemailer": "^7.0.4",
     "passport": "^0.7.0",
