--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "lucide-react": "^0.536.0",
     "react": "^19.1.0",
     "react-bootstrap-icons": "^1.11.6",
