Configuration in backend for the cloudinary for evidence and userprofile v1.2.0

--- a/project/.env
+++ b/project/.env
@@ -7,4 +7,6 @@ GOOGLE_CLIENT_SECRET=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
 GOOGLE_CALLBACK_URL=http://localhost:3000/auth/google/callback
 JWT_SECRET=tu_clave_secreta
 
-
+CLOUDINARY_CLOUD_NAME=ddbu4hjuj
+CLOUDINARY_KEY=466463969916952
+CLOUDINARY_SECRET=4mmc2DPajKG_C2vE21XwsRzZiyE
